--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="images/favicon.png">
-    <title>Clima</title>
+    <title>Gabriel Leszczuk, DWN3A PWA</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Clima</h1>
+        <h1 lang="en">  The Real Weather</h1>
         
     </header>
     <main>  
          <form>
-            <label for="search">Ingrese una ciudad:</label>
+            <label for="search">INGRESE UN CIUDAD:</label>
             <input  id="buscar" value="" type="text" required />
 
             <a id="buscarBtn"></a>
